--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1050,6 +1050,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add each prefix and suffice to remove to a list.\n",
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \", \"Ms. \", \"Mrs. \", \"Miss \", \" MD\", \" DDS\", \" DVM\", \" PhD\"]\n",
+    "\n",
+    "# Iterate through the words in the \"prefixes_suffixes\" list and replace them with an empty space, \"\".\n",
+    "for word in prefixes_suffixes:\n",
+    "    student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word, \"\")\n",
+    "    \n",
+    "student_data_df.head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
