--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1412,6 +1412,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the total number of students.\n",
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
+    "student_count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
