--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1434,6 +1434,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Claculate the total number of schools\n",
+    "school_count_2 = school_data_complete_df[\"school_name\"].unique()\n",
+    "school_count_2\n",
+    "len(school_count_2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
