--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1458,6 +1458,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24649428"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total budget.\n",
+    "total_budget = school_data_df[\"budget\"].sum()\n",
+    "total_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
