--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1480,6 +1480,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.87784018381414"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the average reading score.\n",
+    "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
+    "average_reading_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.98537145774827"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the average math score.\n",
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n",
+    "average_math_score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
