--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1434,26 +1434,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Huang High School' 'Figueroa High School' 'Shelton High School'\n",
+      " 'Hernandez High School' 'Griffin High School' 'Wilson High School'\n",
+      " 'Cabrera High School' 'Bailey High School' 'Holden High School'\n",
+      " 'Pena High School' 'Wright High School' 'Rodriguez High School'\n",
+      " 'Johnson High School' 'Ford High School' 'Thomas High School']\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "15"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Claculate the total number of schools\n",
-    "school_count_2 = school_data_complete_df[\"school_name\"].unique()\n",
-    "school_count_2\n",
-    "len(school_count_2)\n",
-    "\n"
+    "school_count = school_data_complete_df[\"school_name\"].unique()\n",
+    "print(school_count)\n",
+    "total_schools = len(school_count)\n",
+    "total_schools\n"
    ]
   },
   {
@@ -2143,6 +2154,85 @@
     "# Calculate the overall passing percentage.\n",
     "overall_passing_percentage = overall_passing_math_reading_count / student_count * 100\n",
     "overall_passing_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
+       "0             15           39170      24649428           78.985371   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0               81.87784       74.980853          85.805463          65.172326  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding a list of values with keys to create a new DataFrame.\n",
+    "district_summary_df = pd.DataFrame(\n",
+    "          [{\"Total Schools\": total_schools,\n",
+    "          \"Total Students\": student_count,\n",
+    "          \"Total Budget\": total_budget,\n",
+    "          \"Average Math Score\": average_math_score,\n",
+    "          \"Average Reading Score\": average_reading_score,\n",
+    "          \"% Passing Math\": passing_math_percentage,\n",
+    "         \"% Passing Reading\": passing_reading_percentage,\n",
+    "        \"% Overall Passing\": overall_passing_percentage}])\n",
+    "district_summary_df"
    ]
   },
   {
