--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2440,6 +2440,285 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Huang High School        District\n",
+       "Figueroa High School     District\n",
+       "Shelton High School       Charter\n",
+       "Hernandez High School    District\n",
+       "Griffin High School       Charter\n",
+       "Wilson High School        Charter\n",
+       "Cabrera High School       Charter\n",
+       "Bailey High School       District\n",
+       "Holden High School        Charter\n",
+       "Pena High School          Charter\n",
+       "Wright High School        Charter\n",
+       "Rodriguez High School    District\n",
+       "Johnson High School      District\n",
+       "Ford High School         District\n",
+       "Thomas High School        Charter\n",
+       "Name: type, dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Determine the school type.\n",
+    "per_school_types = school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "per_school_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           type\n",
+       "school_name                    \n",
+       "Huang High School      District\n",
+       "Figueroa High School   District\n",
+       "Shelton High School     Charter\n",
+       "Hernandez High School  District\n",
+       "Griffin High School     Charter\n",
+       "Wilson High School      Charter\n",
+       "Cabrera High School     Charter\n",
+       "Bailey High School     District\n",
+       "Holden High School      Charter\n",
+       "Pena High School        Charter\n",
+       "Wright High School      Charter\n",
+       "Rodriguez High School  District\n",
+       "Johnson High School    District\n",
+       "Ford High School       District\n",
+       "Thomas High School      Charter"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add the per_school_types into a DataFrame for testing.\n",
+    "df = pd.DataFrame(per_school_types)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2917\n",
+       "1     2949\n",
+       "2     1761\n",
+       "3     4635\n",
+       "4     1468\n",
+       "5     2283\n",
+       "6     1858\n",
+       "7     4976\n",
+       "8      427\n",
+       "9      962\n",
+       "10    1800\n",
+       "11    3999\n",
+       "12    4761\n",
+       "13    2739\n",
+       "14    1635\n",
+       "Name: size, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total student count.\n",
+    "per_school_counts = school_data_df[\"size\"]\n",
+    "per_school_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Huang High School        2917\n",
+       "Figueroa High School     2949\n",
+       "Shelton High School      1761\n",
+       "Hernandez High School    4635\n",
+       "Griffin High School      1468\n",
+       "Wilson High School       2283\n",
+       "Cabrera High School      1858\n",
+       "Bailey High School       4976\n",
+       "Holden High School        427\n",
+       "Pena High School          962\n",
+       "Wright High School       1800\n",
+       "Rodriguez High School    3999\n",
+       "Johnson High School      4761\n",
+       "Ford High School         2739\n",
+       "Thomas High School       1635\n",
+       "Name: size, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total student count.\n",
+    "per_school_counts = school_data_df.set_index([\"school_name\"])[\"size\"]\n",
+    "per_school_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bailey High School       4976\n",
+       "Johnson High School      4761\n",
+       "Hernandez High School    4635\n",
+       "Rodriguez High School    3999\n",
+       "Figueroa High School     2949\n",
+       "Huang High School        2917\n",
+       "Ford High School         2739\n",
+       "Wilson High School       2283\n",
+       "Cabrera High School      1858\n",
+       "Wright High School       1800\n",
+       "Shelton High School      1761\n",
+       "Thomas High School       1635\n",
+       "Griffin High School      1468\n",
+       "Pena High School          962\n",
+       "Holden High School        427\n",
+       "Name: school_name, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total student count.\n",
+    "per_school_counts = school_data_complete_df[\"school_name\"].value_counts()\n",
+    "per_school_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
